Auto/close (#10)
* go mod

* feat: created lots.go

* feat: model/lots and lots repo

* feat: close expired lots router/main

* feat: added public env in test.http

* feat: slog

* mock tests and tests

* tests

* remove .env.example

* linter

* fixed rows.Err()

* feat: scheduler tests

* linter

* fix: linter and tests

* linter fixed
